[package]
name = "sorting_bench"
version = "0.1.0"
authors = ["Nikolai Morin <nmorin@lyft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "sort"
harness = false

[dependencies]
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"
